# wikibroker-openapi

./: .gitignore  Makefile  README.md
dart-sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart-sdk/lib/: wikibroker_openapi_sdk.dart
dart-sdk/test/: wikibroker_openapi_sdk_test.dart
dart_sdk/: .gitignore
dart_sdk/test/: wikibroker_openapi_sdk_test.dart
docs/: index.html  openapi.json
dotnet-sdk/: .gitignore  WikiBroker.OpenApi.slnx
dotnet-sdk/src/: Core.cs  WikiBroker.OpenApi.Sdk.csproj  WikiBrokerOpenApi.cs
dotnet-sdk/tests/: WikiBroker.OpenApi.Tests.csproj  WikiBrokerOpenApiTest.cs
golang-sdk/: .gitignore  core.go  go.mod  go.sum  main.go  main_test.go  wikibroker_openapi_sdk.go  wikibroker_openapi_sdk_test.go
golang-sdk/adapters/: gorequest.go  grequests.go  native.go  resty.go
golang-sdk/common/: enums.go  hash.go  types.go  utils.go
java-sdk/: .gitignore  README.md  pom.xml
javascript-sdk/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
javascript-sdk/src/: core.ts  index.ts  utils.ts
php-sdk/: .gitattributes  .gitignore  build.php  composer.json
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/src/wikibroker_openapi_sdk/: __init__.py  api.py  core.py
python-sdk/src/wikibroker_openapi_sdk/adapters/: aiohttp.py  aiohttp_adapter.py  httpx.py  httpx_adapter.py  requests.py  requests_adapter.py
python-sdk/src/wikibroker_openapi_sdk/common/: enums.py  hash.py  types.py  utils.py
python-sdk/tests/: test_api.py
swift-sdk/: Package.resolved  Package.swift
(+69 files in other folders)
