[project]
name = "wikibroker-openapi-sdk"
version = "0.1.0"
description = "WikiBroker OpenAPI SDK"
authors = [{ name = "auston", email = "auston@wikiglobal.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "wikibroker_openapi_sdk", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
]
test = ["pytest (>=9.0.2,<10.0.0)"]
