[project]
name = "wikibroker-openapi-sdk"
version = "1.0.1"
description = "WikiBroker OpenAPI SDK"
authors = [{ name = "auston", email = "auston@wikiglobal.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["asyncer (>=0.0.12,<0.0.13)"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
]
test = ["pytest (>=9.0.2,<10.0.0)", "yarl>=1.22.0"]
